@@ -16,7 +16,7 @@
         <junit.version>4.12</junit.version>
         <cucumber.version>1.2.5</cucumber.version>
         <slf4j.version>1.7.29</slf4j.version>
-        <aspectj.version>1.8.10</aspectj.version>
+        <aspectj.version>1.9.6</aspectj.version>
         <allure.cucumber.version>2.8.1</allure.cucumber.version>
         <allure.cucumber.adaptor.version>1.6.4</allure.cucumber.adaptor.version>
         <maven.plugin.version>3.6.2</maven.plugin.version>
@@ -70,6 +70,22 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
+		<dependency>
+		    <groupId>info.cukes</groupId>
+		    <artifactId>cucumber-jvm-deps</artifactId>
+		    <version>1.0.3</version>
+		    <scope>provided</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->
+		<dependency>
+		    <groupId>io.cucumber</groupId>
+		    <artifactId>cucumber-jvm</artifactId>
+		    <version>6.9.0</version>
+		    <type>pom</type>
+		</dependency>
+        
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
@@ -100,16 +116,26 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            
+            <plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>versions-maven-plugin</artifactId>
+			    <version>2.5</version>
+			    <configuration>
+			        <generateBackupPoms>false</generateBackupPoms>
+			    </configuration>
+			</plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <testFailureIgnore>false</testFailureIgnore>
+                    
                     <argLine>
-                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
-                       
-                    </argLine>
+            			--illegal-access=permit
+        			</argLine>
                     
                     <includes>
                         <include>**/TestRunner.java</include>
@@ -128,6 +154,17 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            
+            <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-failsafe-plugin</artifactId>
+			    <version>2.22.0</version>
+			    <configuration>
+			        <argLine>
+			            --illegal-access=permit
+			        </argLine>
+   		 </configuration>
+		</plugin>
         </plugins>
     </build>
 
